<!--
  ~ Copyright (c) 2016. Self Training Systems, Inc - All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is strictly prohibited
  ~ Proprietary and confidential
  ~ Written by TienVNguyen <tien.workinfo@gmail.com - tien.workinfo@icloud.com>, October 2015
  -->

<resources>
    <string name="app_name">Flicks Project</string>
    <string name="text_title">TextTitle</string>
    <string name="text_overview">FlicksOverViewZXCVBNMASDFGHJKLQWERTYUIOPZXCVBNMZXCVBNMASDFGHJKLQWERTYUIOPZXCVBNMZXCVBNMASDFGHJKLQWERTYUIOPZXCVBNM</string>
    <string name="release_date">Release Date:</string>
    <string name="text_release_date">2016-09-14</string>
    <string name="text_empty_list">Empty Data</string>
    <string name="text_empty_list_by_connection_issue">Connection Issue</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="player_error">Error initializing YouTube player</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="video_load_error">Video Loading Error</string>
    <string name="connection_error_title">NO CONNECTION</string>
    <string name="connection_error_message">There is no Internet connection. Please go to setting!</string>
</resources>
