<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2016. Self Training Systems, Inc - All Rights Reserved
  ~ Unauthorized copying of this file, via any medium is strictly prohibited
  ~ Proprietary and confidential
  ~ Written by TienVNguyen <tien.workinfo@gmail.com - tien.workinfo@icloud.com>, October 2015
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:orientation="horizontal"
    android:padding="@dimen/activity_padding">

    <ImageView
        android:id="@+id/listItemIvImage"
        android:layout_width="0dp"
        android:layout_height="@dimen/list_item_image_height"
        android:layout_weight="1"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        tools:src="@drawable/image_placeholder" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/space_small"
        android:layout_marginStart="@dimen/space_small"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/listItemTvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/space_small"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:maxLines="3"
            android:textSize="@dimen/text_large"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            style="@style/TextTemplate"
            tools:text="@string/text_title" />

        <TextView
            android:id="@+id/listItemTvOverview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:maxLines="7"
            style="@style/TextTemplate"
            android:textSize="@dimen/text_small"
            tools:text="@string/text_overview" />
    </LinearLayout>
</LinearLayout>